# zsk4gm_DS5111su24_lab_01

./: .gitignore  README.md  get_books.sh  get_the_books.sh  makefile  pg2151.txt  process_text.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: validations.yml
env/: pyvenv.cfg
src/zsk4gm/: __init__.py  process_text.py
tests/: test_cleaner.py  test_counter.py  test_function_group.py  test_python_version.py  test_tokenizer.py
