[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zsk4gm"
version = "0.0.1"
authors = [
  { name="Hallie Parten", email="zsk4gm@virginia.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hparten/zsk4gm_DS5111su24_lab_01"
Issues = "https://github.com/hparten/zsk4gm_DS5111su24_lab_01/issues"
